--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ header {
   .portfolio {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 10px;
+      grid-gap: 10px;
   }
 
   .portfolio__item {
