--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #16e0bd;
+    --clr-accent: #16b8e0;
     
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -80,6 +80,7 @@ strong { font-weight: var(--fw-bold) }
     letter-spacing: 2px;
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
+    border-radius: 15px;
 }
 
 .btn:hover {
@@ -235,12 +236,18 @@ header {
     position: relative;
 }
 
-.intro__img {
+.intro__img,
+.about-me__img{
     box-shadow: var(--bs);
+    border-radius: 5px;
+    width: auto;
+    height: auto;
 }
 
 .section__subtitle--intro {
     display: inline-block;
+    border-radius: 5px;
+    width: 100%;
 }
 
 @media (min-width: 600px) {
@@ -328,9 +335,19 @@ header {
     max-width: 1000px;
     margin: 0 auto;
 }
+.section__subtitle--about-style {
+    display: flex;
+    width: 170%;
+    padding: 1rem;
+    margin: 0;
+    border-radius: 5px;
+}
 
 .about-me__img {
     box-shadow: var(--bs);
+}
+.about-me_paragraph{
+    text-align: justify;
 }
 @media (min-width: 600px) {
     .about-me {
@@ -346,19 +363,40 @@ header {
     .section__title--about {
         grid-area: title;
     }
-    .section_subtitle--about {
+    
+    .section__subtitle--about{
         display: flex;
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: left;
         position: relative;
-        width: 100%;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+        border-radius: 5px;
+        padding-right: 35%;
         
     }
     .about-me__img {
+        display: flex;
         grid-area: img;
         position: relative;
         z-index: 2;
 
     }
 
+}
+
+@media (max-width: 600px) {
+    .section__subtitle--about {
+        display: flex;
+        position: relative;
+        right: 20px;
+        margin: 0;
+        padding: 10px;
+        border-radius: 5px;
+
+    }
 }
   
 
@@ -390,8 +428,8 @@ header {
       transition:
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
-        height: 200px;
-        width: auto;
+        height: auto;
+        width: 100%;
 
   }
   .portfolio__item:focus {
@@ -455,6 +493,32 @@ header {
       margin: 0 auto;
       align-content: center;
   }
+
+  /*description section*/
+  .description {
+      position: relative;
+      width: 50%;
+      text-align: justify;
+      top: 50%;
+      left: 25%;
+
+  }
+  .description-section {
+      width: 100%;
+      height: 100%;
+      padding: 10vh;
+      margin-bottom: 5%;
+  }
+  .description-title {
+      position: relative;
+      width: 50%;
+      top: 50%;
+      left: 25%;
+      text-align: center;
+      margin-bottom: 1rem;
+
+  }
+
 
 
 
